# nujabes

./: .gitignore  pyproject.toml
src/nujabes/: __init__.py  client.py  constants.py  voice.py
src/nujabes/commands/: play.json
