[project]
name = "nujabes"
version = "0.1.0"
description = ""
authors = [
    {name = "Lance Noble",email = "lance@meetsta.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp (>=2025.7.21,<2026.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
]

[tool.poetry]
packages = [{include = "nujabes", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
